Fixing elements z-index (background image didn't show)

--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -18,6 +18,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    z-index: 0;
 }
 
 /* Headers */
@@ -25,6 +26,7 @@ body {
 .navbar {
     width: 100%;
     background-image: linear-gradient(#1035e8, #1035e844);
+    z-index: 2;
 }
 
 .navbar-container {
@@ -71,7 +73,7 @@ body {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    z-index: -1;
+    z-index: 1;
 }
 
 .first-div {
@@ -89,6 +91,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     column-gap: 10%;
+    z-index: 2;
 }
 
 .info {
